--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </audio>
         <div class="music-info">
             <p class="song-name">
-                <a href="https://www.youtube.com/watch?v=VIDEO_ID" target="_blank">Hans Zimmer - Interstellar - Main Theme</a>
+                <a href="https://www.youtube.com/watch?v=2o9KfyPqQzY" target="_blank">Hans Zimmer - Interstellar - Main Theme</a>
             </p>
             <p class="composer">
                 <a href="https://www.youtube.com/watch?v=4y33h81phKU" target="_blank">Piano Version by Patrik Pietschmann</a>
