--- a/index.html
+++ b/index.html
@@ -27,18 +27,10 @@
         </div>
     </header>
     
-    <div class="box">
-        <span style="--i:10;"><img src="./src/image/image1.jpg" alt=""></span>
-        <span style="--i:9;"><img src="./src/image/image2.jpg" alt=""></span>
-        <span style="--i:8;"><img src="./src/image/image3.jpg" alt=""></span>
-        <span style="--i:7;"><img src="./src/image/image4.jpg" alt=""></span>
-        <span style="--i:6;"><img src="./src/image/image5.jpg" alt=""></span>
-        <span style="--i:5;"><img src="./src/image/image6.jpeg" alt=""></span>
-        <span style="--i:4;"><img src="./src/image/image7.jpg" alt=""></span>
-        <span style="--i:3;"><img src="./src/image/image8.jpg" alt=""></span>
-        <span style="--i:2;"><img src="./src/image/image9.jpg" alt=""></span>
-        <span style="--i:1;"><img src="./src/image/image10.jpg" alt=""></span>
+    <div class="box" id="imageBox">
+
     </div>
+    
 </body>
 
 </html>
